--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -23,6 +23,7 @@ html {
 
 .open-popup {
     visibility: visible;
+    box-shadow: 0px 5px 20px 3px black;
     top: 50%;
     transform: translate(-50%,-50%) scale(1);
 }
@@ -34,10 +35,10 @@ html {
 }
 
 .popup button {
-    width: 100%;
+    width: 90%;
     margin-top: 50px;
     padding: 10px 0;
-    background: #6fd649;
+    background: #0d6efd;
     color: #fff;
     border: 0;
     outline: none;
